// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress :props :color :color is Array, equal to ["#f00", "#0ff", "#f0f"] 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :color :color is Object, equal to { "0%": "#f00", "100%": "#0ff" } 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :color :color is String, equal to "#aaa" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%; background: rgb(170, 170, 170);"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :label :label is String, equal to "custom label test" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      custom label test
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :label :label is TNode, equal to () => "tnode" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      tnode
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :label :label is boolean, equal to false 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      <!---->
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :label :label is boolean, equal to true 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :percentage :percentage is between 0 to 100, equal to 50 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 50%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      50%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :percentage :percentage is great equal than 100, equal to 200 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--success"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 200%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      200%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :percentage :percentage is less than 0, equal to -10 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: -10%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      -10%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :size :size is Number, equal to 50 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :size :size is String, equal to "large" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :size :size is String, equal to "medium" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :size :size is String, equal to "small" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :status :status is active 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--active"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :status :status is error 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--error"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      <svg
        class="t-icon t-icon-clear-circle-filled t-progress--icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :status :status is success 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--success"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-progress--icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :status :status is warning 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--warning"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      <svg
        class="t-icon t-icon-error-circle-filled t-progress--icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :strokeWidth :strokeWidth is Number, equal to 50 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="height: 50px; border-radius: 50px;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :strokeWidth :strokeWidth is String, equal to "50px" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="height: 50px; border-radius: 50px;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :theme :theme circle progress has t-circle--outer and t-circle--inner class 1`] = `
<div
  class="t-progress"
>
  <!---->
  <!---->
  <div
    class="t-progress--circle t-progress--status--undefined"
    style="width: 112px; height: 112px; font-size: 20px;"
  >
    <div
      class="t-progress--info"
    >
      0%
    </div>
    <svg
      height="112"
      viewBox="0 0 112 112"
      width="112"
    >
      <circle
        class="t-circle--outer"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke=""
        stroke-width="6"
      />
      <circle
        class="t-circle--inner"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke-dasharray="0  314.1592653589793"
        stroke-linecap="round"
        stroke-width="6"
        transform="matrix(0,-1,1,0,0,112)"
      />
    </svg>
  </div>
</div>
`;

exports[`Progress :props :theme :theme line and plump progress have t-progress--inner class 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :theme :theme line and plump progress have t-progress--inner class 2`] = `
<div
  class="t-progress"
>
  <!---->
  <div
    class="t-progress--bar t-progress--plump t-progress--under-ten"
    style="border-radius: undefinedpx;"
  >
    <div
      class="t-progress--inner"
      style="width: 0%;"
    >
      <!---->
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress :props :theme :theme:circle 1`] = `
<div
  class="t-progress"
>
  <!---->
  <!---->
  <div
    class="t-progress--circle t-progress--status--undefined"
    style="width: 112px; height: 112px; font-size: 20px;"
  >
    <div
      class="t-progress--info"
    >
      0%
    </div>
    <svg
      height="112"
      viewBox="0 0 112 112"
      width="112"
    >
      <circle
        class="t-circle--outer"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke=""
        stroke-width="6"
      />
      <circle
        class="t-circle--inner"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke-dasharray="0  314.1592653589793"
        stroke-linecap="round"
        stroke-width="6"
        transform="matrix(0,-1,1,0,0,112)"
      />
    </svg>
  </div>
</div>
`;

exports[`Progress :props :theme :theme:line 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress :props :theme :theme:plump 1`] = `
<div
  class="t-progress"
>
  <!---->
  <div
    class="t-progress--bar t-progress--plump t-progress--under-ten"
    style="border-radius: undefinedpx;"
  >
    <div
      class="t-progress--inner"
      style="width: 0%;"
    >
      <!---->
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress :props :trackColor :trackColor is "#aaa" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="background-color: rgb(170, 170, 170); border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Progress pure progress contains one class 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress--bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress--inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress--info"
    >
      0%
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
